changed the title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     
-    <title>Manage Landing Page</title>
+    <title>Manage Landing Page view</title>
 </head>
 <body>
     <nav class="relative container mx-auto p-6">
